hphp/hack/test/typecheck/new_inference/identity_then_invoke.php.exp
File "identity_then_invoke.php", line 20, characters 7-9:
You are trying to access the member foo on a value whose class is unknown (Typing[4296])
File "identity_then_invoke.php", line 18, characters 8-9:
It is unknown because a type could not be determined here
File "identity_then_invoke.php", line 12, characters 23-23:
  via this generic T
